# maltite

courseWork/: CMakeLists.txt  adddish.cpp  adddish.h  adddish.ui  create_prod.cpp  create_prod.h  create_prod.ui  create_recipe.cpp  create_recipe.h  create_recipe.ui  favfood.cpp  favfood.h  favfood.ui  hatefood.cpp  hatefood.h  hatefood.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  product.cpp  product.h  product.ui  products.txt  recipe.cpp  recipe.h  recipe.ui  recipes.txt
